// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disclosure Button matches the snapshot when collapsed 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c1 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover,
.c1[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c1[aria-disabled='true'] {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  background-color: #FFFFFF;
  border: 0;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  display: none;
  position: absolute;
  z-index: 700;
}

.c0 {
  position: relative;
}

<Disclosure
  buttonProps={
    {
      "buttonType": "primary",
      "label": "disclose content",
    }
  }
>
  <styled.div>
    <div
      className="c0"
    >
      <Button
        aria-controls="idContent"
        aria-expanded={false}
        buttonType="primary"
        label="disclose content"
        onBlur={[Function]}
        onClick={[Function]}
      >
        <Styled(AbstractButton)
          aria-controls="idContent"
          aria-expanded={false}
          buttonType="primary"
          focusable={true}
          isMobile={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <AbstractButton
            aria-controls="idContent"
            aria-expanded={false}
            buttonType="primary"
            className="c1"
            focusable={true}
            isMobile={false}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <styled.button
              $focusable={true}
              $isMobile={false}
              aria-controls="idContent"
              aria-expanded={false}
              buttonType="primary"
              className="c1"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <button
                aria-controls="idContent"
                aria-expanded={false}
                className="c2 c1"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                disclose content
              </button>
            </styled.button>
          </AbstractButton>
        </Styled(AbstractButton)>
      </Button>
      <styled.div
        $expanded={false}
        id="idContent"
      >
        <div
          className="c3"
          id="idContent"
        >
          content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Disclosure>
`;

exports[`Disclosure Button matches the snapshot when expanded 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c1 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover,
.c1[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c1[aria-disabled='true'] {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  display: block;
  position: absolute;
  z-index: 700;
}

.c0 {
  position: relative;
}

<Disclosure
  buttonProps={
    {
      "buttonType": "primary",
      "label": "disclose content",
    }
  }
>
  <styled.div>
    <div
      className="c0"
    >
      <Button
        aria-controls="idContent"
        aria-expanded={true}
        buttonType="primary"
        label="disclose content"
        onBlur={[Function]}
        onClick={[Function]}
      >
        <Styled(AbstractButton)
          aria-controls="idContent"
          aria-expanded={true}
          buttonType="primary"
          focusable={true}
          isMobile={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <AbstractButton
            aria-controls="idContent"
            aria-expanded={true}
            buttonType="primary"
            className="c1"
            focusable={true}
            isMobile={false}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <styled.button
              $focusable={true}
              $isMobile={false}
              aria-controls="idContent"
              aria-expanded={true}
              buttonType="primary"
              className="c1"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <button
                aria-controls="idContent"
                aria-expanded={true}
                className="c2 c1"
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                type="button"
              >
                disclose content
              </button>
            </styled.button>
          </AbstractButton>
        </Styled(AbstractButton)>
      </Button>
      <styled.div
        $expanded={true}
        id="idContent"
      >
        <div
          className="c3"
          id="idContent"
        >
          content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Disclosure>
`;

exports[`Disclosure IconButton matches the snapshot when collapsed 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c1 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover,
.c1[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c1[aria-disabled='true'] {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  background-color: #FFFFFF;
  border: 0;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  display: none;
  position: absolute;
  z-index: 700;
}

.c0 {
  position: relative;
}

<Disclosure
  buttonProps={
    {
      "buttonType": "primary",
      "iconName": "home",
      "label": "disclose content",
    }
  }
>
  <styled.div>
    <div
      className="c0"
    >
      <IconButton
        aria-controls="idContent"
        aria-expanded={false}
        buttonType="primary"
        iconName="home"
        label="disclose content"
        onBlur={[Function]}
        onClick={[Function]}
      >
        <Styled(AbstractButton)
          aria-controls="idContent"
          aria-expanded={false}
          aria-label="disclose content"
          buttonType="primary"
          focusable={true}
          isMobile={false}
          onBlur={[Function]}
          onClick={[Function]}
          size="medium"
          type="submit"
        >
          <AbstractButton
            aria-controls="idContent"
            aria-expanded={false}
            aria-label="disclose content"
            buttonType="primary"
            className="c1"
            focusable={true}
            isMobile={false}
            onBlur={[Function]}
            onClick={[Function]}
            size="medium"
            type="submit"
          >
            <styled.button
              $focusable={true}
              $isMobile={false}
              $size="medium"
              aria-controls="idContent"
              aria-expanded={false}
              aria-label="disclose content"
              buttonType="primary"
              className="c1"
              onBlur={[Function]}
              onClick={[Function]}
              type="submit"
            >
              <button
                aria-controls="idContent"
                aria-expanded={false}
                aria-label="disclose content"
                className="c2 c1"
                onBlur={[Function]}
                onClick={[Function]}
                type="submit"
              >
                <Icon
                  aria-hidden="true"
                  name="home"
                  size="16"
                >
                  <House
                    aria-hidden="true"
                    color="currentColor"
                    focusable={false}
                    height="16"
                    width="16"
                  >
                    <ForwardRef
                      aria-hidden="true"
                      className="lucide-house"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      iconNode={
                        [
                          [
                            "path",
                            {
                              "d": "M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8",
                              "key": "5wwlr5",
                            },
                          ],
                          [
                            "path",
                            {
                              "d": "M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z",
                              "key": "r6nss1",
                            },
                          ],
                        ]
                      }
                      width="16"
                    >
                      <svg
                        aria-hidden="true"
                        className="lucide lucide-house"
                        fill="none"
                        focusable={false}
                        height="16"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth={2}
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                          key="5wwlr5"
                        />
                        <path
                          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                          key="r6nss1"
                        />
                      </svg>
                    </ForwardRef>
                  </House>
                </Icon>
              </button>
            </styled.button>
          </AbstractButton>
        </Styled(AbstractButton)>
      </IconButton>
      <styled.div
        $expanded={false}
        id="idContent"
      >
        <div
          className="c3"
          id="idContent"
        >
          content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Disclosure>
`;

exports[`Disclosure IconButton matches the snapshot when expanded 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c1 {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
  padding: 0;
  width: var(--size-2x);
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:hover,
.c1[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: #003A5A;
  color: #FFFFFF;
}

.c1[aria-disabled='true'] {
  background-color: #84C6EA;
  border-color: #84C6EA;
  color: #FFFFFF;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  display: block;
  position: absolute;
  z-index: 700;
}

.c0 {
  position: relative;
}

<Disclosure
  buttonProps={
    {
      "buttonType": "primary",
      "iconName": "home",
      "label": "disclose content",
    }
  }
>
  <styled.div>
    <div
      className="c0"
    >
      <IconButton
        aria-controls="idContent"
        aria-expanded={true}
        buttonType="primary"
        iconName="home"
        label="disclose content"
        onBlur={[Function]}
        onClick={[Function]}
      >
        <Styled(AbstractButton)
          aria-controls="idContent"
          aria-expanded={true}
          aria-label="disclose content"
          buttonType="primary"
          focusable={true}
          isMobile={false}
          onBlur={[Function]}
          onClick={[Function]}
          size="medium"
          type="submit"
        >
          <AbstractButton
            aria-controls="idContent"
            aria-expanded={true}
            aria-label="disclose content"
            buttonType="primary"
            className="c1"
            focusable={true}
            isMobile={false}
            onBlur={[Function]}
            onClick={[Function]}
            size="medium"
            type="submit"
          >
            <styled.button
              $focusable={true}
              $isMobile={false}
              $size="medium"
              aria-controls="idContent"
              aria-expanded={true}
              aria-label="disclose content"
              buttonType="primary"
              className="c1"
              onBlur={[Function]}
              onClick={[Function]}
              type="submit"
            >
              <button
                aria-controls="idContent"
                aria-expanded={true}
                aria-label="disclose content"
                className="c2 c1"
                onBlur={[Function]}
                onClick={[Function]}
                type="submit"
              >
                <Icon
                  aria-hidden="true"
                  name="home"
                  size="16"
                >
                  <House
                    aria-hidden="true"
                    color="currentColor"
                    focusable={false}
                    height="16"
                    width="16"
                  >
                    <ForwardRef
                      aria-hidden="true"
                      className="lucide-house"
                      color="currentColor"
                      focusable={false}
                      height="16"
                      iconNode={
                        [
                          [
                            "path",
                            {
                              "d": "M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8",
                              "key": "5wwlr5",
                            },
                          ],
                          [
                            "path",
                            {
                              "d": "M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z",
                              "key": "r6nss1",
                            },
                          ],
                        ]
                      }
                      width="16"
                    >
                      <svg
                        aria-hidden="true"
                        className="lucide lucide-house"
                        fill="none"
                        focusable={false}
                        height="16"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth={2}
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                          key="5wwlr5"
                        />
                        <path
                          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                          key="r6nss1"
                        />
                      </svg>
                    </ForwardRef>
                  </House>
                </Icon>
              </button>
            </styled.button>
          </AbstractButton>
        </Styled(AbstractButton)>
      </IconButton>
      <styled.div
        $expanded={true}
        id="idContent"
      >
        <div
          className="c3"
          id="idContent"
        >
          content
        </div>
      </styled.div>
    </div>
  </styled.div>
</Disclosure>
`;
